--- a/greeting.html
+++ b/greeting.html
@@ -13,7 +13,7 @@
     <h1></h1>
     <h1></h1>
     <h1></h1>
-    <h1 class="happy-birthday-text">Happy Birthday  Cici Ranti!🎉 </h1>
+    <h1 class="happy-birthday-text">Happy Birthday  Regu Auriga!🎉 </h1>
     <p class="message">🎉 Selamat ulang tahun, semoga Tuhan senantiasa memberkati hidupmu dengan kesehatan yang baik, umur panjang, dan rejeki yang melimpah. Semoga setiap langkahmu dipenuhi dengan kebahagiaan dan kedamaian, serta segala berkat terbaik dari Tuhan mengiringi perjalanan hidupmu, Amin</p>
     <div id="confetti-container"></div>
     <audio id="birthday-audio" autoplay loop>
